{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 3,
  "lineage": "24270213-3156-ecf9-ef68-7c39c825dfad",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "application",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03fa4afc89e4a8a09",
            "arn": "arn:aws:ec2:ap-south-1:600742398721:instance/i-02576b5cedbb4f847",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02576b5cedbb4f847",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Devops",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02b12b0764c084497",
            "private_dns": "ip-172-31-11-31.ap-south-1.compute.internal",
            "private_ip": "172.31.11.31",
            "public_dns": "ec2-3-111-53-160.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.53.160",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0518491cecccfd4c4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "remote",
              "webserver"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d691e9fd381d57f0",
            "tags": {
              "Name": "zomato-application",
              "project": "zomato"
            },
            "tags_all": {
              "Name": "zomato-application",
              "project": "zomato"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0308492abb1b24142",
              "sg-0fb261d2aa06dd979"
            ]
          },
          "dependencies": [
            "aws_security_group.remote",
            "aws_security_group.webserver"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "remote",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:600742398721:security-group/sg-0308492abb1b24142",
            "description": "allow 22 traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0308492abb1b24142",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "remote",
            "name_prefix": "",
            "owner_id": "600742398721",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "remote",
              "project": "uber"
            },
            "tags_all": {
              "Name": "remote",
              "project": "uber"
            },
            "timeouts": null,
            "vpc_id": "vpc-07866a28d71c7f348"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:600742398721:security-group/sg-0fb261d2aa06dd979",
            "description": "allows 80,443 traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fb261d2aa06dd979",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver",
            "name_prefix": "",
            "owner_id": "600742398721",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver-zomato",
              "project": "zomato"
            },
            "tags_all": {
              "Name": "webserver-zomato",
              "project": "zomato"
            },
            "timeouts": null,
            "vpc_id": "vpc-07866a28d71c7f348"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}